--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresgl://localhost:8080/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 soring.datasource.username=app
-spring.datasource.password=example
+spring.datasource.password=12345D
