--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
-soring.datasource.username=app
+spring.datasource.username=app
 spring.datasource.password=12345D
+
